--- a/css/main.css
+++ b/css/main.css
@@ -7,6 +7,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Bilbo&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Kaushan+Script&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Marck+Script&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Trade+Winds&display=swap');
 
 /* paragraph */
 @import url('https://fonts.googleapis.com/css2?family=IM+Fell+English&display=swap');
