added yet another font

--- a/css/card.css
+++ b/css/card.css
@@ -22,8 +22,8 @@
 
 .card-title {
     text-align: center;
-    font-family: 'Sea of Thieves', cursive;
-    letter-spacing: .15em;
+    font-family: 'Windlass', cursive;
+    letter-spacing: .05em;
 }
 
 .card-text {
