--- a/css/card.css
+++ b/css/card.css
@@ -46,12 +46,12 @@
 }
 
 .card-price {
-    padding: 0 10px;
+    padding-left: 10px;
 }
 
 .card-btn-container {
     display: flex;
-    justify-content: flex-end;
+    justify-content: space-between;
     width: 100%;
     border-radius: 0 0 7px 7px;
     background: var(--drk-blue);
