--- a/css/title.css
+++ b/css/title.css
@@ -27,7 +27,9 @@
 
 .title-btn-group button {
     background-color: var(--lg-green);
-    color: var(--off-white);
+    color: white;
+    font-weight: bold;
+    letter-spacing: .1em;
     border: thin solid transparent;
     padding: 10px;
     font-family: inherit;
